Introduces seamless-immutable library

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         map: {
             '@ngrx/store': 'node_modules/@ngrx/store/dist',
             'redux-typed-ducks': 'node_modules/redux-typed-ducks/dist/index.js',
+            'seamless-immutable': 'node_modules/seamless-immutable/seamless-immutable.development.js',
         },
         packages: {        
           'dist': {
